[gd_scene load_steps=4 format=3 uid="uid://cv7dj5mgkain4"]

[ext_resource type="PackedScene" uid="uid://clfi8g6ceswai" path="res://scenes/ui_components/window_template/window_template.tscn" id="1_dglbq"]
[ext_resource type="Script" uid="uid://g7rw4jo052d3" path="res://scenes/ui_components/main_menu/new_game/new_game.gd" id="2_ubr68"]
[ext_resource type="Resource" uid="uid://bmiw77gr6ula4" path="res://resources/main_save.tres" id="3_2koab"]

[node name="NewGame" instance=ExtResource("1_dglbq")]
script = ExtResource("2_ubr68")
main_save_file = ExtResource("3_2koab")

[node name="Label" parent="PanelContainer/VBoxContainer/PanelContainer" index="0"]
text = "New Game"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer" index="0"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" index="0"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Save Name"

[node name="LineEditSaveName" type="LineEdit" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
placeholder_text = "Enter a name for your save file."
context_menu_enabled = false
emoji_menu_enabled = false
caret_blink = true

[node name="LabelSaveNameError" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="0"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Character Name"

[node name="LineEditCharacterName" type="LineEdit" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
placeholder_text = "Enter a name for the character."
context_menu_enabled = false
emoji_menu_enabled = false
caret_blink = true

[node name="LabelCharNameError" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer" index="2"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer2" index="0"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="ButtonStartNewGame" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer2/HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start New Game"

[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer2/HBoxContainer/ButtonStartNewGame" to="." method="_on_button_start_new_game_pressed"]
